# ZuMicrobiome

./: .replit  README.md  app.py  models.py  pyproject.toml
attached_assets/: Pasted-import-os-from-flask-import-Flask-render-template-jsonify-request-redirect-url-for-session-fro-1737286289711.txt
instance/: health_tracker.db
static/: manifest.json
static/css/: styles.css
static/js/: app.js  sw.js  tracking.js
templates/: base.html  dashboard.html  index.html  insights.html  track.html  track_meal.html  track_mood.html  track_stool.html
templates/admin/: dashboard.html  login.html
